# -ESP32-C3-Demo

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
components/ble_service/: CMakeLists.txt  ble_service.c
components/ble_service/include/: ble_service.h
components/bsp/: CMakeLists.txt  bsp_board.c
components/bsp/include/: bsp_board.h
components/common/: CMakeLists.txt  storage_manager.c  sys_msg.c
components/common/include/: storage_manager.h  sys_msg.h  version.h
components/ec11/: CMakeLists.txt  ec11.c
components/ec11/include/: ec11.h
components/esp_lcd_st7735/: CMakeLists.txt  esp_lcd_st7735.c
components/esp_lcd_st7735/include/: esp_lcd_st7735.h
components/gui_engine/: CMakeLists.txt  gui_engine.c
components/gui_engine/include/: gui_engine.h
components/my_ui/: CMakeLists.txt  ui.c
components/my_ui/include/: ui.h
components/st7735/: CMakeLists.txt  gfx.c  st7735s.c  st7735s.h  st7735s_compat.c
components/uart_service/: CMakeLists.txt  uart_service.c
components/uart_service/include/: uart_service.h
components/ui/: CMakeLists.txt  ui_entry.h  ui_manager.c
components/ui/components/: ui_status_bar.c
components/ui/icon/: message_ai.c  music.c  settings.c  wifi.c
components/ui/pages/: page_main.c  page_settings.c
components/ui/pages/settings/: page_brightness.c  (+6 more)
components/wifi_service/: CMakeLists.txt  wifi_service.c
components/wifi_service/include/: wifi_service.h
main/: CMakeLists.txt  hello_world_main.c
main/ui/: ui_manager.c
main/ui/components/: ui_status_bar.c
main/ui/pages/: page_main.c
(+2 files in other folders)
